obtener coordenadas radio
